data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2106.wast
;; Test 7: Design a block with nested loops where inner loop conditions depend on calculations performed in the outer loop. The block's result type is `i32`. Verify if WebAssembly exits nested loops correctly, whereas `wizard_engine` fails due to improper operand stack transitions, leading to an infinite nested loop scenario.

(assert_invalid
  (module (func $nested_loops_stack_mismanagement (result i32)
    (block (result i32)
      (loop $outer (result i32)
        (i32.const 10)
        (loop $inner (result i32)
          (i32.const 1)
          (br_if 1 (i32.eq (i32.const 0) (i32.rem_u (local.get 0) (i32.const 2))))
          (br_if 0 (i32.lt_s (i32.sub (local.get 0) (i32.const 1)) (i32.const 1)))
        )
        (br 0)
      )
    )
  ))
  "type mismatch"
)